--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <base href="/svelte-todo/" />
+    <base href="https://bloodzmoon.github.io/svelte-todo/" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
 
     <title>Svelte Todo</title>
